# agents-sdk-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/langchain/: .env.example  README.md  agent.py
suprsend_agents/: __init__.py  auth.py  client.py  context.py  types.py
suprsend_agents/core/: base.py
suprsend_agents/tools/: objects.py  resolve_workspace.py  search_docs.py  tenants.py  users.py
suprsend_agents_toolkit/: __init__.py  auth.py  client.py  context.py  types.py
suprsend_agents_toolkit/core/: __init__.py  base.py  management.py
suprsend_agents_toolkit/tools/: _utils.py  event_trigger.py  lists.py  objects.py  resolve_workspace.py  search_docs.py  tenants.py  users.py  validate_schema.py  workflow_trigger.py
suprsend_agents_toolkit/tools/management/: __init__.py  events.py  preference_categories.py  schemas.py  translations.py  workflows.py
suprsend_management/: __init__.py  client.py  exception.py
suprsend_management/api/: base.py  events.py  preference_categories.py  schemas.py  translations.py  workflows.py
